assets/ui/FuzzPanelMain.css
/** Body Styles **/

body {
  padding-right: 0px;
}

/** Grid Styles **/

.fuzzGrid {
  width: 100%;
  padding-left: 4px;
}
.fuzzGrid td {
  word-break: break-word;
  padding: 4px 6px;
}
.fuzzGrid th {
  text-align: left;
  padding: 4px 6px;
  border-bottom: 1px solid;
  vertical-align: bottom;
}
.fuzzGrid th.colorColumn {
  padding: 4px 8px;
  text-align: center;
}
td.fuzzGridCellPinned,
td.fuzzGridCellPin {
  text-align: center;
}
th.fuzzGridCellPinned,
th.fuzzGridCellPin {
  text-align: center;
}

td.fuzzGridCellPin {
  opacity: 0%;
}
td.fuzzGridCellPinned,
td.fuzzGridCellPin:hover {
  opacity: 100%;
}

/* Correct icons */
td.classCheckOff {
  opacity: 25%;
  width: 1%;
  padding-left: 1px;
  padding-right: 1px;
  text-align: center;
}
td.classErrorOff {
  opacity: 25%;
  width: 1%;
  text-align: center;
  padding-left: 0px;
  padding-right: 0px;
}
td.classQuestionOff {
  opacity: 25%;
  width: 1%;
  padding-left: 1px;
  padding-right: 1px;
  text-align: center;
}
td.classCheckOn {
  opacity: 100%;
  color: rgba(95, 250, 152, 0.665);
  width: 1%;
  padding-left: 1px;
  padding-right: 1px;
  text-align: center;
}
td.classErrorOn {
  opacity: 100%;
  color: rgba(250, 65, 65, 0.665);
  width: 1%;
  padding-left: 0px;
  padding-right: 0px;
  text-align: center;
}
td.classQuestionOn {
  opacity: 100%;
  color: rgb(230, 212, 108);
  width: 1%;
  padding-left: 1px;
  padding-right: 1px;
  text-align: center;
}

/* Expected output */
td.classErrorCell {
  text-decoration: red underline wavy;
}
vscode-text-field.classErrorCell {
  opacity: 100%;
  outline-style: solid;
  outline-width: 0.05cm;
  outline-color: rgb(206, 39, 72);
}
td.classCorrectCell {
  opacity: 100%;
  outline-style: solid;
  outline-width: 0.05cm;
  outline-color: rgba(136, 247, 103, 0.665);
}
tr.classGetExpectedOutputRow {
  color: white;
  margin-left: 3em;
  background-color: rgb(49, 47, 47);
}
tr.classErrorExpectedOutputRow {
  margin-left: 3em;
  opacity: 60%;
  color: white;
  background-color: rgb(49, 47, 47);
  /* opacity: 100%;
  background-color: rgb(90, 47, 47); */
}
tr.classErrorExpectedOutputRow td div {
  display: table-cell;
  vertical-align: middle;
}
.expectedOutputErrorMessage {
  color: red;
  margin-left: 1em;
  font-weight: bold;
}

/** Tooltips: adapted from: https://www.w3schools.com/css/css_tooltip.asp **/

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltip-left .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  top: -5px;
  right: 110%;
}

.tooltip-left .tooltiptext::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 100%;
  margin-top: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent transparent black;
}

.tooltip-top .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  bottom: 150%;
  left: 50%;
  margin-left: -60px;
}

.tooltip-top .tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

/* Sorting */
.columnSortDesc::after {
  content: " ▼";
}
.columnSortAsc::after {
  content: " ▲";
}

